crates/norn-macros/tests/ui/flatten_non_struct.rs
#![allow(dead_code)]

use norn_macros::ToolArgs;
use serde::Deserialize;

#[derive(Deserialize, ToolArgs)]
struct BadFlatten {
    /// A scalar that cannot be flattened.
    #[serde(flatten)]
    inner: String,
}

fn main() {}
